fixes new footer height on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2206,7 +2206,7 @@ h2 {
 html {
   position: relative;
   box-sizing: border-box;
-  padding-bottom: 312px;
+  padding-bottom: 456px;
 }
 
 .main-footer {
