--- a/assets/css/main.prefixed.css
+++ b/assets/css/main.prefixed.css
@@ -2208,7 +2208,7 @@ html {
   position: relative;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-  padding-bottom: 312px;
+  padding-bottom: 456px;
 }
 
 .main-footer {
