--- a/assets/scss/theme/_layout.scss
+++ b/assets/scss/theme/_layout.scss
@@ -24,7 +24,7 @@
 html {
 	position: relative;
 	box-sizing: border-box;
-	padding-bottom: 13*$base-spacing-unit;
+	padding-bottom: 19*$base-spacing-unit;
 }
 
 .main-footer {
